--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 ---
 include:
+    - project: renovate-bot/renovate-runner
+      file: /templates/renovate-config-validator.gitlab-ci.yml
+
+include:
   - project: guardianproject-ops/projects
     ref: main
     file: terraform_templates/tf-module.gitlab-ci.yml
