--- a/.gitlab-ci.local.yml
+++ b/.gitlab-ci.local.yml
@@ -1,11 +1,3 @@
 ---
-image: python:latest
-
-stages:
-  - test
-
-test:hello:
-  stage: test
-  script:
-    - echo hello world
-
+variables:
+  TERRAFORM_VERSION: 1.10.4
